@@ -4,6 +4,10 @@
     <target name="init" description="Initialization">
         <property name="beanshell" value="../lib/java/bsh-1.2b3.jar"/>
         <property name="AppleJava" value="packaging/AppleJavaExtensions.jar"/>
+	    <property name="Java3DCore" value="packaging/j3dcore.jar"/>
+	    <property name="Java3DUtils" value="packaging/j3dutils.jar"/>
+	    <property name="JavaVecMath" value="packaging/vecmath.jar"/>
+	    <property name="JUnit" value="packaging/junit.jar"/>
     </target>
 
     <target name="compile" depends="init" description="Compile">
@@ -11,6 +15,8 @@
             <classpath><pathelement location="${beanshell}"/></classpath>
             <classpath><pathelement location="${AppleJava}"/></classpath>
             <exclude name="intervalsimulation/"/>
+	        <exclude name="com/sun/electric/tests/"/>
+	        <exclude name="com/sun/electric/tool/user/ui/j3d/"/>
         </javac>
     </target>
 
@@ -157,6 +163,47 @@
         </delete>
         <delete file="electric.jar"/>
         <delete dir="apidoc"/>
+    </target>
+
+	<!-- Gilda's stuff: tests and 3D -->
+	<target name="compileGilda" depends="init" description="Compile">
+        <javac debug="true" deprecation="true" destdir="." srcdir="." source="1.4">
+            <classpath><pathelement location="${beanshell}"/></classpath>
+            <classpath><pathelement location="${AppleJava}"/></classpath>
+	        <classpath><pathelement location="${Java3DCore}"/></classpath>
+	        <classpath><pathelement location="${Java3DUtils}"/></classpath>
+	        <classpath><pathelement location="${JavaVecMath}"/></classpath>
+	        <classpath><pathelement location="${JUnit}"/></classpath>
+            <exclude name="intervalsimulation/"/>
+        </javac>
+    </target>
+
+	<target name="jarGilda" depends="init,compileGilda" description="Make binary Jar file">
+        <property name="version" value=""/>
+        <unjar dest="." src="${beanshell}"/>
+        <unjar dest="." src="${AppleJava}"/>
+        <delete dir="META-INF"/>
+        <copy file="packaging/electric.mf" tofile="electric${version}.mf"/>
+        <jar basedir="." compress="true" jarfile="electric${version}.jar" manifest="electric${version}.mf">
+            <exclude name="apidoc/"/>
+            <exclude name="bin/"/>
+            <exclude name="intervalsimulation/"/>
+            <exclude name="packaging/"/>
+            <exclude name="build.xml"/>
+            <exclude name="ChangeLog.txt"/>
+            <exclude name="electric${version}.jar"/>
+            <exclude name="electric${version}.mf"/>
+            <exclude name="**/*.java"/>
+            <exclude name="**/*.form"/>
+        </jar>
+        <delete file="electric${version}.mf"/>
+        <delete dir="bsh"/>
+        <delete dir="com/apple"/>
+        <delete quiet="true">
+            <fileset dir="com">
+                <include name="**/*.class"/>
+            </fileset>
+        </delete>
     </target>
 
 </project>
