@@ -2,6 +2,8 @@
 
 ************************* Version 8.00: Released  *************************
 
+IMP: (6/21/04, GVG) Adapting code for 3D View. New commands in Build.xml and some layers got non-zero thickness.
+
 IMP: (6/21/04, SMR) Implemented "Edit / Selection / Push Selection", "Pop Selection".
 
 IMP: (6/20/04, SMR) Implemented simple waveform window cross-probing.
